--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 未知国家-1.51MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.92MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇬🇧 英国-1.15MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-636.2KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-1.42MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇰🇷 韩国-5.19MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林), server: 51.161.118.38, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 51.161.118.38, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-391.2KB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-388.7KB/s(Youtube:不良林), server: 20.239.179.251, port: 50045, type: vmess, uuid: 1617e875-e377-4e4f-85ef-dcf9e5e10df7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.179.251}}
+  - {name: 🇯🇵 日本-351.8KB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.63MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.35MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 未知国家-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 未知国家-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 未知国家-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.92MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 未知国家-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 未知国家-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 未知国家-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 未知国家-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
