--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-636.2KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-1.42MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇰🇷 韩国-5.19MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林), server: 51.161.118.38, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 51.161.118.38, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-391.2KB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-388.7KB/s(Youtube:不良林), server: 20.239.179.251, port: 50045, type: vmess, uuid: 1617e875-e377-4e4f-85ef-dcf9e5e10df7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.179.251}}
+  - {name: 🇬🇧 英国-1.63MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.78MB/s(Youtube:不良林), server: 51.161.118.38, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-768.1KB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇫🇷 法国-946.6KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-1.74MB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇯🇵 日本-351.8KB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.63MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.35MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇰🇷 韩国-3.34MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1017.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
