--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.63MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.78MB/s(Youtube:不良林), server: 51.161.118.38, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-768.1KB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇫🇷 法国-946.6KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-1.74MB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇯🇵 日本-351.8KB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.63MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.35MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 51.161.118.38, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇰🇷 韩国-3.34MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.38MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-549.1KB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
+  - {name: 🇩🇪 德国-3.15MB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
+  - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-957.2KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 6f48efb9-3817-4652-832f-fd04d93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇮🇳 印度-3.17MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-768.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-946.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-957.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
