--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 51.161.118.38, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇰🇷 韩国-3.34MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.38MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇭🇰 香港-3.82MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇬🇧 英国-1.42MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇯🇵 日本-351.8KB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.84MB/s(Youtube:不良林), server: 51.161.118.38, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-549.1KB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
   - {name: 🇩🇪 德国-3.15MB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
   - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
@@ -66,18 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.43MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-351.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
